fix alignment

--- a/styles.css
+++ b/styles.css
@@ -669,6 +669,10 @@ section {
     max-width: none;
     min-height: 240px;
   }
+
+  .timeline__link {
+    align-self: flex-start;
+  }
 }
 
 
